WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34680
Web Inspector: Fragment-held Elements Not Shown in Inspector
https://bugs.webkit.org/show_bug.cgi?id=34680
Summary
Web Inspector: Fragment-held Elements Not Shown in Inspector
John Resig
Reported
2010-02-06 10:26:29 PST
Elements inside a fragment, inside an array, are not displayed. Reduction: var frag = document.createDocumentFragment(); frag.appendChild( document.createElement("p") ); In the web inspector you see:
> frag.firstChild
(nothing is shown) var a = [ frag.firstChild ];
> a
[] Even though the array has a length and holds an element. See also here:
http://dev.jquery.com/ticket/6045
Attachments
[PATCH] The fix.
(5.08 KB, patch)
2010-02-06 11:30 PST
,
Pavel Feldman
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2010-02-06 11:30:44 PST
Created
attachment 48290
[details]
[PATCH] The fix.
WebKit Commit Bot
Comment 2
2010-02-07 04:52:27 PST
Comment on
attachment 48290
[details]
[PATCH] The fix. Clearing flags on attachment: 48290 Committed
r54470
: <
http://trac.webkit.org/changeset/54470
>
WebKit Commit Bot
Comment 3
2010-02-07 04:52:35 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug